TAG: qcreports_db-6-0-22-57
DATE: 09/22/2023
STAFF: lec
wts2-1285/tweak to two recent QCs
GXD_FullCodeableLargeScale.py 
GXD_FullCodeableAdultSpecs.py

TAG: qcreports_db-6-0-22-56
DATE: 09/21/2023
STAFF: lec
wts2-1281/fl2-544/Add a column to the results of Strains report #14
mgd/MLP_Nomenclature.sql

TAG: qcreports_db-6-0-22-55
DATE: 09/06/2023
STAFF: lec
wts2-1268/fl2503/2 new GXD QC reports for fullcoding priority
#       new file:   monthly/GXD_FullCodeableLargeScale.py
#       new file:   monthly/GXD_FullCodeableAdultSpecs.py

TAG: qcreports_db-6-0-22-54
DATE: 07/11/2023
STAFF: lec
wts2-1228/fl2-437/GXD HT Raw Sample Key/Value Search--preferential return of predicted yes/no
GXD_HTRawSampleByKey.py,GXD_HTRawSampleByValue.py

TAG: qcreports_db-6-0-22-53
DATE: 06/27/2023
STAFF: jer
wts2-1177/fl2-412 Add fields to extracted text custom report.

TAG: qcreports_db-6-0-22-52
DATE: 06/14/2023
STAFF: lec
wts2-1210/fl2-411/GXD QC: add another excluded assay type

TAG: qcreports_db-6-0-22-51
TAG: qcreports_db-6-0-22-50
DATE: 06/12/2023
STAFF: lec
wts2-1208/fl2-402/add PMID id to GXD HT Experiment Note Search
pwi/GXD_HTExperimentByNote.py

TAG: qcreports_db-6-0-22-49
DATE: 06/08/2023
STAFF: jer
wts2-1195/fl2-399/Custom report alleles with "mut =" in Nomenclature note

TAG: qcreports_db-6-0-22-48
DATE: 06/08/2023
STAFF: dbm
wts2-1201/fl2-400/Various QC report changes (retire, change frequency, reorder)

TAG: qcreports_db-6-0-22-47
DATE: 05/30/2023
STAFF: lec
wts2-1194/fl2-385/Adding columns to Strain Check by Strain Nomenclature report
PRB_StrainNomenCheck.py

TAG: qcreports_db-6-0-22-46
DATE: 05/24/2023
STAFF: lec
wts2-1187/fl2-362/Missing driver QC report
wts2-1190/fl2-465/new custom report: GXD Assay Note Search

TAG: qcreports_db-6-0-22-45
TAG: qcreports_db-6-0-22-44
DATE: 05/23/2023
STAFF: lec
wts2-1185/fl2-355/Variant Curation Activity Report

TAG: qcreports_db-6-0-22-43
DATE: 05/12/2023
STAFF: lec