@@ -1,6 +1,8 @@
+TAG: qcreports_db-6-0-22-58
 TAG: qcreports_db-6-0-22-57
 DATE: 09/22/2023
 STAFF: lec
+wts2-1286/fl2-554/change GXD #39 and #40 from monthly runs to weekly
 wts2-1285/tweak to two recent QCs
 GXD_FullCodeableLargeScale.py 
 GXD_FullCodeableAdultSpecs.py
